--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "myodevops/alternative",
     "description": "Evolutions of layouts and components of Laravel AdminLTE",
 	"license": "MIT",
-    "version": "00.10.10",
+    "version": "dev-master",
 	"authors": [
         {
             "name": "nicola-myo",
@@ -53,13 +53,10 @@
         ]
     },
     "require": {
-        "laravel/framework": ">=6.0",
-        "php": ">=7.2.0",
+        "illuminate/support": "^11.0",
         "jeroennoten/laravel-adminlte": ">=v3.8.5",
-        "moment/moment": "^2.29.1",
-        "datatables/datatables": "^1.10",
-        "tempusdominus/bootstrap-4": "^5.1",
-        "select2/select2": "^4.0"
+        "laragear/webauthn": "^3.1.2",
+        "php": ">=8.2"
     },
     "require-dev": {
         "phpunit/php-timer": "^5.0"
